modules/k8s/env/k3s/wordpress/01-frontal.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ap000-frontal
  namespace: proves
spec:
  selector:
    matchLabels:
      aplicacio: ap000
      entorn: pro
      tier: frontal
      tecnologia: stateful-set
      cluster: cluster-pro
  serviceName: "ap000"
  replicas: 1
  template:
    metadata:
      labels:
        aplicacio: ap000
        entorn: pro
        tier: frontal
        tecnologia: stateful-set
        cluster: cluster-pro
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: ap000
          image: wordpress
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: ap000
              mountPath: /var/www/html
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "128Mi"
  volumeClaimTemplates:
    - metadata:
        name: ap000
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "k8s-pro-b15390a-tecnic"
        resources:
          requests:
            storage: 1Gi
