modules/k8s/env/k3s/wordpress/03-base-de-dades.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ap000-base-de-dades
  namespace: proves
spec:
  selector:
    matchLabels:
      aplicacio: ap000
      entorn: pro
      tier: base-de-dades
      tecnologia: stateful-set
      cluster: cluster-pro
  serviceName: "ap000"
  replicas: 1
  template:
    metadata:
      labels:
        aplicacio: ap000
        entorn: pro
        tier: base-de-dades
        tecnologia: stateful-set
        cluster: cluster-pro
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: ap000
          image: mysql:5.7
          ports:
            - containerPort: 3306
              name: bd
          volumeMounts:
            - name: ap000
              mountPath: /var/lib/mysql
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "128Mi"
  volumeClaimTemplates:
    - metadata:
        name: ap000
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "k8s-pro-b15390a-contingut"
        resources:
          requests:
            storage: 1Gi
