modules/k8s/env/k3s/wordpress/02-servei-frontal.yml
apiVersion: v1
kind: Service
metadata:
  name: ap000-service
  namespace: proves
  labels:
    aplicacio: ap000
    entorn: pro
    tier: wordpress
    tecnologia: service
    cluster: cluster-pro
spec:
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    entorn: pro
    tier: frontal
    tecnologia: stateful-set
    cluster: cluster-pro
  type: NodePort
