modules/k8s/env/k3s/wordpress/05-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ap000-ingress
  namespace: proves
  labels:
    aplicacio: ap000
    entorn: pro
    tier: frontal
    tecnologia: ingress
    cluster: cluster-pro
spec:
  defaultBackend:
    service:
      name: ap000
      port:
        number: 80
  rules:
    - host: wordpress-fariseos.$domain_intra_ba
      http:
        paths:
          - backend:
              service:
                name: ap000
                port:
                  number: 80
            path: /
            pathType: Prefix
